alignment fix

--- a/styles/site.css
+++ b/styles/site.css
@@ -72,7 +72,7 @@ div#car-info {
 div#car-description {
   margin-top: 10px;
   margin-left: 8px;
-  margin-right: 20px;
+  margin-right: 40px;
   font-size: 18px;
 }
 
@@ -173,6 +173,7 @@ div#infoAnnotations {
   display: flex;
   flex-direction: column;
   width: 400px;
+  margin-left: -13px;
 }
 
 div#map {
@@ -208,6 +209,7 @@ div#map {
 
 #mapAnnotations {
   margin-top: 5%;
+  margin-left: -10px;
 }
 
 
@@ -275,7 +277,7 @@ div#lineText {
 .bar-desc {
   width: 400px;
   font-size: 18px;
-  margin-right: 60px;
+  margin-right: 50px;
 }
 
 button {
@@ -302,4 +304,8 @@ button {
 #scatterAnnotations {
   /* padding-right: 50px; */
   margin-left: -50px;
+}
+
+#barchartAnnotations {
+  margin-left: 20px;
 }
